# courswork5

./: README.md  pyproject.toml
main/: main.py
src/: classes.py  utils.py
